# lobstertrap-lola

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  sbom.json
docs/adr/: 0001-record-architecture-decisions.md  0002-go-migration.md  README.md  go-migration.md  template.md  use-adrs.md
docs/concepts/: roadmap.md  skills-and-modules.md
docs/dev-guide/: architecture.md  contributing.md
docs/dev-guide/design/: .pages  go-migration.md  index.md
docs/guides/: creating-modules.md  modules.md
mk/: adr.mk  dev.mk
src/lola/: __main__.py  config.py  dependencies.py  models.py  parsers.py  prompts.py
src/lola/cli/: completions.py  install.py  market.py  mod.py  sync.py
src/lola/targets/: base.py  claude_code.py  cursor.py  gemini.py  install.py  openclaw.py  opencode.py
tests/: conftest.py  test_cli_install.py  test_cli_install_cherry_pick.py  test_cli_install_scope.py  test_cli_main.py  test_cli_mod.py  test_dependencies.py  test_installer.py  test_instructions.py  test_integration.py  test_marketplace_model.py  test_models.py  test_opencode_target.py  test_prompts.py  test_prompts_components.py  test_scoped_install_integration.py  test_sources.py  test_targets.py  test_targets_base.py  test_uninstall_scope.py
