[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "lola-ai"
dynamic = ["version"]
description = "AI Skills Package Manager"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.13"
authors = [
    {name = "Igor Brandao"},
    {name = "Katie Mulliken"},
]
dependencies = [
    "click>=8.3.0",
    "rich>=13.0.0",
    "pygments>=2.20.0",
    "pyyaml>=6.0.0",
    "python-frontmatter>=1.1.0",
    "inquirerpy>=0.3.4",
    "packaging>=24.0",
    "platformdirs>=4.0.0",
]

# Dev dependencies are in [dependency-groups] below (PEP 735)
# Install with: uv sync --group dev

[project.scripts]
lola = "lola.__main__:main"

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build.hooks.vcs]
version-file = "src/lola/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/lola"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/lola"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pre-commit>=4.0.0",
    "ruff>=0.8.0",
    "ty>=0.0.4",
    "bandit>=1.9.4",
    "mypy>=1.19.1",
    "types-pyyaml>=6.0.12.20250915",
    "filelock>=3.20.3",
    "virtualenv>=20.36.1",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.0.0",
    "mkdocs-mermaid2-plugin>=1.0.0",
    "pymdown-extensions>=10.21.2",
    "mkdocs-awesome-pages-plugin>=2.9.0",
    "mkdocs-panzoom-plugin>=0.5.2",
]

[tool.ruff]
extend-exclude = ["src/lola/_version.py"]

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["src"]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
warn_return_any = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "frontmatter"
ignore_missing_imports = true
